tests/mm0_mmu/fail/bad-sort241.mm0
-- bad modifier order
strict free pure sort s241;